Update Descriptions the correct way